Functioning Login and Register Module

--- a/CGCApp/views/index.handlebars
+++ b/CGCApp/views/index.handlebars
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>CGC-Home</title>
-</head>
+
 <body>
-	<h1>Dummy Page {{title}}</h1>
+	<h2>CGC</h2>
+	<p>Welcome to CGC Dashboard</p>
 
 </body>
-</html>
