--- a/CGCApp/public/css/style.css
+++ b/CGCApp/public/css/style.css
@@ -77,3 +77,21 @@ body {
     border-bottom: 0;
   }
 }
+  .page-header {
+    margin-top: 0;
+  }
+html {
+  position: relative;
+  min-height: 100%;
+}
+body {
+  /* Margin bottom by footer height */
+  margin-bottom: 60px;
+}
+.footer {
+  position: absolute;
+  bottom: 0;
+  /* Set the fixed height of the footer here */
+  height: 60px;
+  background-color: #f5f5f5;
+}
