--- a/CGCApp/views/layouts/layout.handlebars
+++ b/CGCApp/views/layouts/layout.handlebars
@@ -10,10 +10,14 @@
       <div class="header clearfix">
         <nav>
           <ul class="nav nav-pills pull-right">
+            {{#if user}}
             <li role="presentation"><a href="/">Home</a></li>
+            <li role="presentation"><a href="/user/logout">Logout</a></li>
+            {{else}}
             <li role="presentation"><a href="/user/register">Register</a></li>
             <li role="presentation"><a href="/user/login">Login</a></li>
-            <li role="presentation"><a href="/user/logout">Logout</a></li>
+            {{/if}}
+
           </ul>
         </nav>
         <h3 class="text-muted">CGC App</h3>
@@ -21,6 +25,17 @@
 
       <div class="row">
         <div class="col-lg-12">
+        {{#if success_msg}}
+          <div class="alert alert-success">{{success_msg}}</div>
+        {{/if}}
+
+        {{#if error_msg}}
+          <div class="alert alert-danger">{{error_msg}}</div>
+        {{/if}}
+
+        {{#if error}}
+          <div class="alert alert-danger">{{error}}</div>
+        {{/if}}
         {{{body}}}
         </div>
       </div>
@@ -29,5 +44,10 @@
         <p>&copy; 2016 CGC App</p>
       </footer>
     </div> <!-- /container -->
+  <script type="text/javascript" src="/js/jquery-2.2.4.js"></script>
+  <script type="text/javascript" src="/js/jquery-ui.js"></script>
+  <script type="text/javascript" src="/js/bootstrap.js"></script>
+  <script type="text/javascript" src="/js/main.js"></script>
+
 </body>
 </html>
