Added Search User

--- a/CGCApp/views/layouts/layout.handlebars
+++ b/CGCApp/views/layouts/layout.handlebars
@@ -12,6 +12,7 @@
           <ul class="nav nav-pills pull-right">
             {{#if user}}
             <li role="presentation"><a href="/">Home</a></li>
+            <li role="presentation"><a href="/user/search">Search</a></li>
             <li role="presentation"><a href="/user/logout">Logout</a></li>
             {{else}}
             <li role="presentation"><a href="/user/register">Register</a></li>
