Started Socket.io + Added Jmeter scripts for registration of 200 test users + Unfollow Button

--- a/CGCApp/views/index.handlebars
+++ b/CGCApp/views/index.handlebars
@@ -2,5 +2,9 @@
 <body>
 	<h2>CGC</h2>
 	<p>Welcome to CGC Dashboard</p>
-
+	<ul id="messages"></ul>
+	    <form action="">
+	      <input id="m" autocomplete="off" />
+	      <button onclick="sendMessage(); return false;" >Send</button>
+	    </form>
 </body>
