Socket.io follow notifications to both follower and followee

--- a/CGCApp/views/index.handlebars
+++ b/CGCApp/views/index.handlebars
@@ -1,10 +1,8 @@
 
-<body>
+<body ng-controller="IndexCtrl">
 	<h2>CGC</h2>
 	<p>Welcome to CGC Dashboard</p>
 	<ul id="messages"></ul>
-	    <form action="">
 	      <input id="m" autocomplete="off" />
-	      <button onclick="sendMessage(); return false;" >Send</button>
-	    </form>
+	      <button ng-click="sendMessage();" >Send</button>
 </body>
